--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <style>
+      @font-face {
+        font-family: Researcher;
+        src: url('%sveltekit.assets%/researcher/ttf/researcher-researcher-regular-400.ttf')
+          format('truetype');
+      }
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %sveltekit.head%
   </head>
