--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"
+      integrity="sha512-Kef5sc7gfTacR7TZKelcrRs15ipf7+t+n7Zh6mKNJbmW+/RRdCW9nwfLn4YX0s2nO6Kv5Y2ChqgIakaC6PW09A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <style>
       @font-face {
@@ -13,7 +26,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover">
+
+  <body data-sveltekit-preload-data="hover" class="relative bg-slate-950 text-white">
     <div style="display: contents">%sveltekit.body%</div>
+    <div class="absolute left-0 top-0 z-[-1] min-h-screen w-full opacity-70">
+      <div id="particles-js" class="absolute inset-0" />
+    </div>
+    <script>
+      particlesJS.load('particles-js', '/assets/particles.json', function () {
+        console.log('callback - particles.js config loaded');
+      });
+    </script>
   </body>
 </html>
